--- a/src/index.css
+++ b/src/index.css
@@ -212,7 +212,9 @@ input.error {
 }
 
 .alert {
+  color: #fff;
   text-transform: uppercase;
   font-size: 0.85rem;
   margin-top: 0.5rem;
+  text-shadow: 2px 2px #1d1c1c;
 }
